# sydes

./: .gitignore  README.md  pyproject.toml  utc-formatting.patch
src/sydes/: __init__.py  cli.py
src/sydes/domain/: errors.py  models.py
src/sydes/extractors/fastapi/: chunker.py  structure.py
src/sydes/graph/: builder.py  model.py
src/sydes/orchestrator/: pipeline.py
src/sydes/repo/: framework_detector.py  ignore.py  scanner.py
src/sydes/store/: sqlite_store.py
src/sydes/testgen/: normalize.py  plan.py  specs.py
tests/: test_endpoint_spec_normalization.py  test_fastapi_chunker.py  test_graph_builder.py  test_scanner_basic.py  test_scans_diff.py  test_store_incremental.py  test_testplan_builder.py
